# mmrag

./: .env.example  .gitignore  APPLICATION_ANSWER_zh.md  Dockerfile  PROJECT_OVERVIEW_zh.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  demo-script.md  eval-report.md
examples/: demo-questions.md
src/mmrag/: __init__.py  __main__.py  config.py  models.py  runtime.py  utils.py
src/mmrag/agents/: __init__.py  tracing.py  workflow.py
src/mmrag/api/: __init__.py  app.py  schemas.py
src/mmrag/cli/: __init__.py  main.py
src/mmrag/connectors/: __init__.py  github.py
src/mmrag/evals/: __init__.py  demo_suite.json  runner.py
src/mmrag/indexing/: __init__.py  chunking.py  service.py
src/mmrag/model_providers/: __init__.py  base.py  openai_compatible.py
src/mmrag/retrieval/: __init__.py  service.py
src/mmrag/storage/: __init__.py  catalog.py  vector_store.py
tests/: test_catalog.py  test_chunking.py  test_connector.py  test_evals.py  test_model_provider.py  test_retrieval.py  test_workflow.py
